# archid-registry

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  config.json
examples/: schema.rs
schema/: execute_msg.json  instantiate_msg.json  query_msg.json  schema.json
src/: contract.rs  error.rs  handlers.rs  integration_test.rs  lib.rs  msg.rs  read_utils.rs  state.rs  tests.rs  write_utils.rs
