[package]
name = "archid-registry"
version = "1.0.0"
authors = [
  "johhonn <johhonn@users.noreply.github.com>",
  "Drew Taylor <drew.taylor@philabs.xyz>",
]
edition = "2018"
description = "ArchID cw721 token collection contract (AID)"
keywords = ["ArchID", "CosmWasm"]
repository = "https://github.com/archid-protocol/archid-registry"
homepage = "https://archid.app"
documentation = "https://docs.archid.app"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  -e CARGO_TERM_COLOR=always \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = "~1.0.0-beta"
cosmwasm-storage = "~1.0.0-beta"
cw-storage-plus = "0.12"
cw2 = "0.12"

schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
cw-utils = "0.14.0"

cw721-updatable = { git = "https://github.com/archid-protocol/cw721-updatable.git", version = "1.0.0" }
archid-token = { git = "https://github.com/archid-protocol/archid-token.git", version = "1.0.0", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "~1.0.0-beta"
cw-multi-test = "0.13.2"
